--- a/index.html
+++ b/index.html
@@ -219,6 +219,29 @@
 
 <body>
 
+  <!-- Main Header Image -->
+  <div class="logo-wrap">
+  <img src="https://raw.githubusercontent.com/Guthanger-123/Deadpoly-Community-Hub/main/deadpoly_box-hor-wht.png"
+       alt="DeadPoly"
+       class="logo-main">
+</div>
+
+  .logo-wrap{
+  position:absolute;
+  top:90px;
+  left:50%;
+  transform:translateX(-50%);
+  z-index:5;
+}
+
+.logo-main{
+  width:420px;
+  max-width:80vw;
+  height:auto;
+  opacity:.95;
+}
+
+  
   <!-- HOME / MENU -->
   <section id="home" class="page active">
     <div class="stage">
@@ -354,7 +377,32 @@
     }
   </script>
 
+  <div class="official-links">
+  <a href="https://discord.gg/YOUR_DISCORD" target="_blank" title="Discord">
+    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png">
+  </a>
+
+  <a href="https://www.youtube.com/@DeadPoly" target="_blank" title="YouTube">
+    <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png">
+  </a>
+
+  <a href="https://store.steampowered.com/app/DeadPoly" target="_blank" title="Steam">
+    <img src="https://cdn-icons-png.flaticon.com/512/3670/3670151.png">
+  </a>
+
+  <a href="https://store.epicgames.com" target="_blank" title="Epic Games">
+    <img src="https://cdn-icons-png.flaticon.com/512/5968/5968863.png">
+  </a>
+
+  <a href="https://deadpoly.wiki" target="_blank" title="Official Site">
+    <img src="https://raw.githubusercontent.com/Guthanger-123/Deadpoly-Community-Hub/main/deadpoly_box_full-wht.png">
+  </a>
+</div>
+
+
+
 </body>
 </html>
+
 
 
