--- a/maps.html
+++ b/maps.html
@@ -50,15 +50,15 @@ body {
 <div class="maps">
   <div class="map-card">
     <h2>Garden City</h2>
-    <a href="gc-map.html">
-      <img src="images/GCMap_.png">
+    <a href="garden-city.html">
+      <img src="assets/GCMap_.png">
     </a>
   </div>
 
   <div class="map-card">
     <h2>Delta</h2>
-    <a href="delta-map.html">
-      <img src="images/DeltaMap.png">
+    <a href="delta.html">
+      <img src="assets/Screenshot 2025-09-08 194255.png">
     </a>
   </div>
 </div>
