--- a/garden-city.html
+++ b/garden-city.html
@@ -74,7 +74,7 @@ padding:8px 10px; border-radius:8px; border:1px solid #555;">
 
   <!-- Sticks to the middle top -->
   <div class="map-banner">
-    <img alt="DeadPoly" src="https://github.com/Guthanger-123/Deadpoly-Map-Garden-City-/blob/main/logo_main.png?raw=true">
+    <img alt="DeadPoly" src="assets/deadpoly_hor-wht.png">
   </div>
 
   <div class="panel filters" id="filterPanel"><h4>Key</h4></div>
@@ -100,15 +100,15 @@ padding:8px 10px; border-radius:8px; border:1px solid #555;">
 
   /* SURFACE image (1264×1264) */
 const SURFACE_IMAGE_URL =
-    'https://github.com/Guthanger-123/Deadpoly-Map-Garden-City-/blob/main/GCMap_.png?raw=true';
+    'assets/GCMap_.png';
 
   /* UNDERGROUND image (same pixel size as surface) */
   const UNDERGROUND_IMAGE_URL = 
-    'https://github.com/Guthanger-123/Deadpoly-Map-Garden-City-/blob/main/GCMap_.png?raw=true';
+    'hassets/GCMap_.png';
 
     /* Quests image (same pixel size as surface) */
   const Quests_IMAGE_URL = 
-    'https://github.com/Guthanger-123/Deadpoly-Map-Garden-City-/blob/main/GCMap_.png?raw=true';
+    'assets/GCMap_.png';
 
   
   /* EXACT pixel size of both images */
