--- a/delta.html
+++ b/delta.html
@@ -63,7 +63,7 @@ padding:8px 10px; border-radius:8px; border:1px solid #555;">
 
   <!-- Sticks to the middle top -->
   <div class="map-banner">
-    <img alt="DeadPoly" src="https://media.discordapp.net/attachments/987368741736181820/1168764966501879838/deadpoly_hor-wht.png?ex=68ff9a72&is=68fe48f2&hm=61ff011c0fdc185843652f45c8b2683e4e5ff7ac05c8231b4c149e53b205642b&=&format=webp&quality=lossless">
+    <img alt="DeadPoly" src="assets/deadpoly_hor-wht.png">
   </div>
 
   <div class="panel filters" id="filterPanel"><h4>Key</h4></div>
@@ -93,12 +93,12 @@ padding:8px 10px; border-radius:8px; border:1px solid #555;">
 
   /* SURFACE image (1264×1264) */
   const SURFACE_IMAGE_URL =
-    'https://github.com/Guthanger-123/DeadPoly-Map-Delta/blob/main/Screenshot%202025-08-31%20221504.png?raw=true';
+    'assets/Screenshot 2025-09-08 194255.png';
 
 
   /* UNDERGROUND image (same pixel size as surface) */
   const UNDERGROUND_IMAGE_URL =
-    'https://github.com/Guthanger-123/DeadPoly-Map-Delta/blob/main/Screenshot%202025-08-31%20221504.png?raw=true';
+    'assets/Screenshot 2025-09-08 194255.png';
 
   /* EXACT pixel size of both images */
   const IMAGE_WIDTH  = 1264;
