--- a/maps.html
+++ b/maps.html
@@ -5,6 +5,16 @@
 <title>DeadPoly Maps</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GD7LNZHQMM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GD7LNZHQMM');
+</script>
+  
 <style>
 body {
   background:#111;
