--- a/wiki.html
+++ b/wiki.html
@@ -4,6 +4,17 @@
 <meta charset="utf-8">
 <title>DeadPoly Wiki</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GD7LNZHQMM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GD7LNZHQMM');
+</script>
+  
 <style>
 body {
   background:#111;
@@ -18,7 +29,7 @@ body {
 <a href="index.html">← Back to Hub</a>
 
 <h1>DeadPoly Wiki</h1>
-<p>This is a community-maintained wiki.</p>
+<p>This is a community made wiki. NOT THE OFFICIAL.</p>
 
 <h2>Example Page</h2>
 <ul>
