--- a/garden-city.html
+++ b/garden-city.html
@@ -104,7 +104,7 @@ const SURFACE_IMAGE_URL =
 
   /* UNDERGROUND image (same pixel size as surface) */
   const UNDERGROUND_IMAGE_URL = 
-    'hassets/GCMap_.png';
+    'assets/GCMap_.png';
 
     /* Quests image (same pixel size as surface) */
   const Quests_IMAGE_URL = 
