--- a/delta.html
+++ b/delta.html
@@ -104,12 +104,12 @@ padding:8px 10px; border-radius:8px; border:1px solid #555;">
 
   /* SURFACE image (1264×1264) */
   const SURFACE_IMAGE_URL =
-    'https://github.com/Guthanger-123/Deadpoly-Community-Hub/blob/main/assets/delta';
+    'assets/delta';
 
 
   /* UNDERGROUND image (same pixel size as surface) */
   const UNDERGROUND_IMAGE_URL =
-    'https://github.com/Guthanger-123/Deadpoly-Community-Hub/blob/main/assets/delta';
+    'assets/delta';
 
   /* EXACT pixel size of both images */
   const IMAGE_WIDTH  = 1264;
