--- a/garden-city.html
+++ b/garden-city.html
@@ -100,15 +100,15 @@ padding:8px 10px; border-radius:8px; border:1px solid #555;">
 
   /* SURFACE image (1264×1264) */
 const SURFACE_IMAGE_URL =
-    'https://github.com/Guthanger-123/Deadpoly-Community-Hub/blob/main/assets/GCMap_.png';
+    'assets/GCMap_.png';
 
   /* UNDERGROUND image (same pixel size as surface) */
   const UNDERGROUND_IMAGE_URL = 
-    'https://github.com/Guthanger-123/Deadpoly-Community-Hub/blob/main/assets/GCMap_.png';
+    'assets/GCMap_.png';
 
     /* Quests image (same pixel size as surface) */
   const Quests_IMAGE_URL = 
-    'https://github.com/Guthanger-123/Deadpoly-Community-Hub/blob/main/assets/GCMap_.png';
+    'assets/GCMap_.png';
 
   
   /* EXACT pixel size of both images */
