--- a/maps.html
+++ b/maps.html
@@ -68,7 +68,7 @@ body {
   <div class="map-card">
     <h2>Delta</h2>
     <a href="delta.html">
-      <img src="assets/delta">
+      <img src="assets/delta.png">
     </a>
   </div>
 </div>
