--- a/delta.html
+++ b/delta.html
@@ -330,6 +330,26 @@
     btnOk.addEventListener('click', close);
     btnX.addEventListener('click', close);
   })();
+
+  // ✅ LAST THING — Leaflet full-size / mobile fix
+  (function ensureLeafletFullSize(){
+    const refreshMap = () => {
+      setTimeout(() => {
+        map.invalidateSize(true);
+        map.fitBounds(bounds, { animate:false, padding:[90,90] }); // match your padding
+      }, 80);
+    };
+
+    window.addEventListener('load', refreshMap, { passive:true });
+    window.addEventListener('resize', refreshMap, { passive:true });
+    window.addEventListener('orientationchange', refreshMap, { passive:true });
+
+    document.addEventListener('visibilitychange', () => {
+      if (!document.hidden) refreshMap();
+    });
+
+    refreshMap();
+  })();
   </script>
 </body>
 </html>
