--- a/garden-city.html
+++ b/garden-city.html
@@ -379,7 +379,6 @@
 
   // Initial
   renderMarkers(markersSurface);
-
   // WIP modal
   (function setupWipModal(){
     const modal = document.getElementById('wipModal');
@@ -388,6 +387,26 @@
     function close() { modal.style.display = 'none'; }
     btnOk.addEventListener('click', close);
     btnX.addEventListener('click', close);
+  })();
+
+  // ✅ LAST THING — Leaflet full-size / mobile fix
+  (function ensureLeafletFullSize(){
+    const refreshMap = () => {
+      setTimeout(() => {
+        map.invalidateSize(true);
+        map.fitBounds(bounds, { animate:false, padding:[90,90] }); // match your padding
+      }, 80);
+    };
+
+    window.addEventListener('load', refreshMap, { passive:true });
+    window.addEventListener('resize', refreshMap, { passive:true });
+    window.addEventListener('orientationchange', refreshMap, { passive:true });
+
+    document.addEventListener('visibilitychange', () => {
+      if (!document.hidden) refreshMap();
+    });
+
+    refreshMap();
   })();
   </script>
 </body>
