--- a/garden-city.html
+++ b/garden-city.html
@@ -258,6 +258,7 @@
   const startLatLng = map.unproject([START.x, START.y], 0);
   const minZoomToShowAll = map.getBoundsZoom(bounds, true);
   map.options.minZoom = minZoomToShowAll; // keeps you from zooming out past full image
+  map.setView(startLatLng, minZoomToShowAll);
 
   L.control.scale({ metric:true, imperial:false }).addTo(map);
 
