--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ body {
   <a href="maps.html">Maps</a>
   <a href="tips.html">Tips & Tricks</a>
 
-  <a href="wiki.html" class="center">Wiki</a>
+  <a href="wiki.html" class="center">Information</a>
 </div>
 
 <div class="footer">
@@ -109,5 +109,6 @@ body {
 
 </body>
 </html>
+
 
 
