--- a/index.html
+++ b/index.html
@@ -100,15 +100,17 @@ body {
   <div class="credits">Credits</div>
 
   <div class="socials">
-    <a href="https://discord.gg/YOURDISCORD" target="_blank"><img src="assets/discord.png"></a>
-    <a href="https://youtube.com" target="_blank"><img src="assets/youtube.png"></a>
-    <a href="https://store.steampowered.com" target="_blank"><img src="assets/steam.png"></a>
-    <a href="https://epicgames.com" target="_blank"><img src="assets/epic.png"></a>
+    <a href="https://discord.com/invite/DeadPoly" target="_blank"><img src="assets/discord.png"></a>
+    <a href="https://www.youtube.com/@PlayDeadPoly" target="_blank"><img src="assets/youtube.png"></a>
+    <a href="https://store.steampowered.com/app/1621070/DeadPoly/" target="_blank"><img src="assets/steam.png"></a>
+    <a href="https://store.epicgames.com/en-US/p/deadpoly-bce932" target="_blank"><img src="assets/epic.png"></a>
+    <a href="https://deadpoly.com/" target="_blank"><img src="assets/deadpoly_box_full-wht.png"></a>
   </div>
 </div>
 
 </body>
 </html>
+
 
 
 
