--- a/delta.html
+++ b/delta.html
@@ -372,7 +372,7 @@
     box-shadow:0 10px 30px rgba(0,0,0,.45);
     pointer-events:none;
   `;
-  box.innerHTML = `<b>BTS DEV MODE</b><div style="opacity:.75">Ctrl+Shift+D to toggle • Esc to close</div><hr style="border:none;border-top:1px solid rgba(255,255,255,.12);margin:8px 0">`;
+  box.innerHTML = `<b>BTS DEV MODE</b><div style="opacity:.75">Ctrl+Shift+P to toggle • Esc to close</div><hr style="border:none;border-top:1px solid rgba(255,255,255,.12);margin:8px 0">`;
   const pre = document.createElement('pre');
   pre.style.cssText = `margin:0; white-space:pre-wrap;`;
   box.appendChild(pre);
