--- a/tips.html
+++ b/tips.html
@@ -123,7 +123,7 @@
   // ----- Edit here: add / remove tips -----
   const tipsData = [
     {
-      title: "Starting fast (first 10 minutes)",
+      title: "Baby Steps (first 10 minutes)",
       tags: ["Basics", "Loot"],
       bullets: [
         "Pick a simple loot loop and repeat it until you have meds + ammo.",
