--- a/maps.html
+++ b/maps.html
@@ -16,7 +16,21 @@
 </script>
   
 <style>
-body {
+body 
+ 
+  <!-- TOP BAR -->
+<div class="topbar">
+  <a class="btn" href="index.html">← Menu</a>
+
+  <div class="topbar-title">Maps</div>
+
+  <div class="topbar-right">
+    <a class="btn" href="tips.html">Tips</a>
+    <a class="btn" href="wiki.html">Wiki</a>
+  </div>
+</div>
+
+  {
   background:#111;
   color:white;
   font-family:system-ui;
