--- a/maps.html
+++ b/maps.html
@@ -16,21 +16,7 @@
 </script>
   
 <style>
-body 
- 
-  <!-- TOP BAR -->
-<div class="topbar">
-  <a class="btn" href="index.html">← Menu</a>
-
-  <div class="topbar-title">Maps</div>
-
-  <div class="topbar-right">
-    <a class="btn" href="tips.html">Tips</a>
-    <a class="btn" href="wiki.html">Wiki</a>
-  </div>
-</div>
-
-  {
+body   {
   background:#111;
   color:white;
   font-family:system-ui;
@@ -67,6 +53,19 @@ body
 </style>
 </head>
 
+  <!-- TOP BAR -->
+<div class="topbar">
+  <a class="btn" href="index.html">← Menu</a>
+
+  <div class="topbar-title">Maps</div>
+
+  <div class="topbar-right">
+    <a class="btn" href="tips.html">Tips</a>
+    <a class="btn" href="wiki.html">Wiki</a>
+  </div>
+</div>
+
+  
 <body>
 
 <a class="back" href="index.html">← Back to Hub</a>
