--- a/maps.html
+++ b/maps.html
@@ -16,12 +16,55 @@
 </script>
   
 <style>
+
+  /* ===== Top Bar (shared) ===== */
+.topbar{
+  position: sticky; top:0; z-index:1000;
+  display:grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items:center;
+  gap:12px;
+  padding:12px 16px;
+  background: rgba(10,10,10,.72);
+  backdrop-filter: blur(10px);
+  border-bottom: 1px solid rgba(255,255,255,.08);
+}
+.topbar-title{
+  justify-self:center;
+  color:#cfcfcf;
+  font: 13px/1.2 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+  letter-spacing:.4px;
+}
+.topbar-right{
+  justify-self:end;
+  display:flex;
+  gap:10px;
+  align-items:center;
+}
+.btn{
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  padding:7px 12px;
+  border-radius:10px;
+  text-decoration:none;
+  color:#e9e9e9;
+  background: rgba(255,255,255,.06);
+  border: 1px solid rgba(255,255,255,.10);
+  font: 12px/1 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+  transition: transform .12s ease, background .12s ease;
+}
+.btn:hover{
+  background: rgba(255,255,255,.10);
+  transform: translateY(-1px);
+}
+
 body   {
   background:#111;
   color:white;
   font-family:system-ui;
   margin:0;
-  padding:40px;
+  padding:18px;
 }
 
 .back {
