--- a/wiki.html
+++ b/wiki.html
@@ -1,42 +1,442 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>DeadPoly Wiki</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GD7LNZHQMM"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-GD7LNZHQMM');
-</script>
-  
 <style>
-body {
-  background:#111;
-  color:white;
-  font-family:system-ui;
-  padding:40px;
-}
+  :root{
+    --bg:#0b0d10;
+    --panel:rgba(255,255,255,.06);
+    --panel2:rgba(255,255,255,.04);
+    --line:rgba(255,255,255,.10);
+    --text:#e9e9e9;
+    --muted:#b6b6b6;
+    --accent:#5fb3ff;
+    --shadow: 0 18px 40px rgba(0,0,0,.45);
+    --radius: 16px;
+  }
+
+  *{box-sizing:border-box}
+  html,body{height:100%}
+  body{
+    margin:0;
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+    color:var(--text);
+    background:
+      radial-gradient(900px 500px at 20% 0%, rgba(95,179,255,.12), transparent 55%),
+      radial-gradient(900px 600px at 80% 0%, rgba(255,255,255,.06), transparent 60%),
+      var(--bg);
+  }
+
+  /* ===== Top Bar (shared style) ===== */
+  .topbar{
+    position: sticky; top:0; z-index:1000;
+    display:grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items:center;
+    gap:12px;
+    padding:12px 16px;
+    background: rgba(10,10,10,.72);
+    backdrop-filter: blur(10px);
+    border-bottom: 1px solid rgba(255,255,255,.08);
+  }
+  .topbar-title{
+    justify-self:center;
+    color:#cfcfcf;
+    font: 13px/1.2 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+    letter-spacing:.4px;
+  }
+  .topbar-right{
+    justify-self:end;
+    display:flex;
+    gap:10px;
+    align-items:center;
+  }
+  .btn{
+    display:inline-flex;
+    align-items:center;
+    justify-content:center;
+    padding:7px 12px;
+    border-radius:10px;
+    text-decoration:none;
+    color:#e9e9e9;
+    background: rgba(255,255,255,.06);
+    border: 1px solid rgba(255,255,255,.10);
+    font: 12px/1 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+    transition: transform .12s ease, background .12s ease, border-color .12s ease;
+    user-select:none;
+  }
+  .btn:hover{ background: rgba(255,255,255,.10); transform: translateY(-1px); border-color: rgba(255,255,255,.14); }
+
+  /* ===== Layout ===== */
+  .wrap{
+    max-width: 1120px;
+    margin: 0 auto;
+    padding: 18px 16px 36px;
+  }
+
+  .hero{
+    display:flex;
+    flex-direction:column;
+    gap:10px;
+    margin-top: 8px;
+    padding: 18px;
+    border:1px solid var(--line);
+    border-radius: var(--radius);
+    background: linear-gradient(180deg, rgba(255,255,255,.07), rgba(255,255,255,.03));
+    box-shadow: var(--shadow);
+  }
+  .hero h1{
+    margin:0;
+    font-size: 26px;
+    letter-spacing:.2px;
+  }
+  .hero p{
+    margin:0;
+    color:var(--muted);
+    font-size: 13px;
+    line-height: 1.4;
+  }
+
+  .controls{
+    display:flex;
+    flex-wrap:wrap;
+    gap:10px;
+    margin-top: 10px;
+    align-items:center;
+  }
+
+  .search{
+    flex: 1 1 260px;
+    display:flex;
+    align-items:center;
+    gap:10px;
+    padding: 10px 12px;
+    border-radius: 14px;
+    border: 1px solid var(--line);
+    background: rgba(0,0,0,.25);
+  }
+  .search input{
+    width:100%;
+    border:none;
+    outline:none;
+    background:transparent;
+    color:var(--text);
+    font-size: 13px;
+  }
+  .pillrow{
+    display:flex;
+    flex-wrap:wrap;
+    gap:8px;
+  }
+  .pill{
+    cursor:pointer;
+    padding: 7px 10px;
+    border-radius: 999px;
+    border: 1px solid var(--line);
+    background: rgba(255,255,255,.04);
+    color: var(--text);
+    font-size: 12px;
+    transition: .12s ease;
+    user-select:none;
+  }
+  .pill:hover{ background: rgba(255,255,255,.08); }
+  .pill.active{ border-color: rgba(95,179,255,.55); box-shadow: 0 0 0 3px rgba(95,179,255,.12); }
+
+  .grid{
+    margin-top: 16px;
+    display:grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 14px;
+  }
+
+  .card{
+    grid-column: span 6;
+    border:1px solid var(--line);
+    border-radius: var(--radius);
+    background: rgba(255,255,255,.04);
+    box-shadow: 0 10px 30px rgba(0,0,0,.25);
+    overflow:hidden;
+  }
+
+  @media (max-width: 860px){
+    .card{ grid-column: span 12; }
+  }
+
+  /* ===== Spin image box ===== */
+  .media{
+    position:relative;
+    background: radial-gradient(500px 240px at 50% 0%, rgba(95,179,255,.10), transparent 55%),
+                rgba(0,0,0,.30);
+    border-bottom:1px solid var(--line);
+    padding: 14px;
+  }
+
+  .spinbox{
+    width: 100%;
+    max-width: 360px;
+    margin: 0 auto;
+    perspective: 900px; /* gives the spin a little depth */
+  }
+  .spinbox img{
+    width:100%;
+    height:auto;
+    display:block;
+    border-radius: 14px;
+    border: 1px solid rgba(255,255,255,.12);
+    box-shadow: 0 14px 30px rgba(0,0,0,.35);
+    cursor:pointer;
+    user-select:none;
+    -webkit-user-drag:none;
+    transform: translateZ(0);
+    will-change: transform;
+  }
+
+  /* The 360 spin animation */
+  @keyframes spin360 {
+    from { transform: rotateY(0deg); }
+    to   { transform: rotateY(360deg); }
+  }
+
+  /* applied when clicked */
+  .spinning{
+    animation: spin360 700ms ease-in-out 1;
+  }
+
+  .hint{
+    text-align:center;
+    color: var(--muted);
+    font-size: 12px;
+    margin-top: 10px;
+  }
+
+  .content{
+    padding: 14px 14px 16px;
+  }
+  .titleRow{
+    display:flex;
+    gap:10px;
+    align-items:flex-start;
+    justify-content:space-between;
+  }
+  .content h3{
+    margin:0;
+    font-size: 16px;
+  }
+  .tags{
+    display:flex;
+    gap:6px;
+    flex-wrap:wrap;
+    justify-content:flex-end;
+  }
+  .tag{
+    font-size: 11px;
+    padding: 4px 8px;
+    border-radius: 999px;
+    border: 1px solid rgba(255,255,255,.10);
+    background: rgba(255,255,255,.04);
+    color: #d7d7d7;
+  }
+  .content p{
+    margin: 10px 0 0;
+    color: var(--muted);
+    font-size: 13px;
+    line-height: 1.45;
+  }
+
+  .actions{
+    margin-top: 12px;
+    display:flex;
+    gap:10px;
+    flex-wrap:wrap;
+  }
+  .linkbtn{
+    display:inline-flex;
+    align-items:center;
+    gap:8px;
+    padding: 9px 12px;
+    border-radius: 12px;
+    border:1px solid rgba(255,255,255,.12);
+    background: rgba(255,255,255,.05);
+    color: var(--text);
+    text-decoration:none;
+    font-size: 12px;
+    transition:.12s ease;
+  }
+  .linkbtn:hover{ background: rgba(255,255,255,.09); transform: translateY(-1px); }
+  .dot{
+    width:7px;height:7px;border-radius:999px;background:var(--accent);display:inline-block;
+  }
+
+  .footerNote{
+    margin-top: 18px;
+    color: rgba(255,255,255,.45);
+    font-size: 12px;
+  }
 </style>
 </head>
+
 <body>
+  <div class="topbar">
+    <a class="btn" href="index.html">← Menu</a>
+    <div class="topbar-title">Wiki</div>
+    <div class="topbar-right">
+      <a class="btn" href="maps.html">Maps</a>
+      <a class="btn" href="tips.html">Tips</a>
+    </div>
+  </div>
 
-<a href="index.html">← Back to Hub</a>
+  <div class="wrap">
+    <div class="hero">
+      <h1>DeadPoly Wiki</h1>
+      <p>Community pages for items, places, mechanics, and progression. Click an image to spin it 360°.</p>
 
-<h1>DeadPoly Wiki</h1>
-<p>This is a community made wiki. NOT THE OFFICIAL.</p>
+      <div class="controls">
+        <div class="search" title="Search wiki entries">
+          <span style="opacity:.7">🔎</span>
+          <input id="searchInput" placeholder="Search (ex: bunker key, ammo, trader, vehicle)..." />
+        </div>
 
-<h2>Example Page</h2>
-<ul>
-  <li>Bunkers</li>
-  <li>Traders</li>
-  <li>Weapons</li>
-</ul>
+        <div class="pillrow" id="pillRow">
+          <div class="pill active" data-tag="All">All</div>
+          <div class="pill" data-tag="Items">Items</div>
+          <div class="pill" data-tag="Weapons">Weapons</div>
+          <div class="pill" data-tag="Armor">Armor</div>
+          <div class="pill" data-tag="Vehicles">Vehicles</div>
+          <div class="pill" data-tag="Bunkers">Bunkers</div>
+        </div>
+      </div>
+    </div>
 
+    <div class="grid" id="grid"></div>
+
+    <div class="footerNote">
+      Want to add entries? Scroll to the bottom of this file and edit the <b>wikiData</b> array.
+      Put images in <b>assets/wiki/</b> and reference them like <b>assets/wiki/yourimage.png</b>.
+    </div>
+  </div>
+
+<script>
+  // ========= DATA: add your wiki entries here =========
+  const wikiData = [
+    {
+      title: "Example Item — Medkit",
+      tags: ["Items"],
+      img: "assets/wiki/medkit.png",
+      text: "Short description. Where it spawns, why it matters, and any tips.",
+      links: [
+        { label: "Related: Tips page", href: "tips.html" }
+      ]
+    },
+    {
+      title: "Example Weapon — Rifle",
+      tags: ["Weapons","Items"],
+      img: "assets/wiki/rifle.png",
+      text: "Damage notes, where to find ammo, and what it’s best used for.",
+      links: [
+        { label: "Open Maps", href: "maps.html" }
+      ]
+    },
+    {
+      title: "Example Vehicle — Car",
+      tags: ["Vehicles"],
+      img: "assets/wiki/car.png",
+      text: "Spawn behavior, common locations, and what to carry for repairs.",
+      links: [
+        { label: "Garden City map", href: "garden-city.html" }
+      ]
+    }
+  ];
+
+  // ========= RENDER + FILTER =========
+  const grid = document.getElementById("grid");
+  const searchInput = document.getElementById("searchInput");
+  const pillRow = document.getElementById("pillRow");
+
+  let activeTag = "All";
+  let query = "";
+
+  function matches(entry){
+    const q = query.trim().toLowerCase();
+    const inText = (entry.title + " " + entry.text + " " + entry.tags.join(" ")).toLowerCase().includes(q);
+    const tagOk = (activeTag === "All") || entry.tags.includes(activeTag);
+    return inText && tagOk;
+  }
+
+  function render(){
+    const items = wikiData.filter(matches);
+    grid.innerHTML = items.map((e, idx) => cardHtml(e, idx)).join("");
+
+    // attach spin handlers
+    document.querySelectorAll("[data-spin]").forEach(img => {
+      img.addEventListener("click", () => {
+        // restart animation cleanly every click
+        img.classList.remove("spinning");
+        void img.offsetWidth; // force reflow
+        img.classList.add("spinning");
+      });
+
+      // prevent drag ghost image on some browsers
+      img.addEventListener("dragstart", (ev) => ev.preventDefault());
+    });
+  }
+
+  function cardHtml(e, idx){
+    const tagHtml = e.tags.map(t => `<span class="tag">${t}</span>`).join("");
+    const linksHtml = (e.links || []).map(l => `
+      <a class="linkbtn" href="${l.href}">
+        <span class="dot"></span>${l.label}
+      </a>
+    `).join("");
+
+    return `
+      <article class="card">
+        <div class="media">
+          <div class="spinbox">
+            <img data-spin src="${e.img}" alt="${escapeHtml(e.title)}" loading="lazy">
+          </div>
+          <div class="hint">Click image to spin 360°</div>
+        </div>
+        <div class="content">
+          <div class="titleRow">
+            <h3>${escapeHtml(e.title)}</h3>
+            <div class="tags">${tagHtml}</div>
+          </div>
+          <p>${escapeHtml(e.text)}</p>
+          ${linksHtml ? `<div class="actions">${linksHtml}</div>` : ``}
+        </div>
+      </article>
+    `;
+  }
+
+  function escapeHtml(str){
+    return String(str)
+      .replaceAll("&","&amp;")
+      .replaceAll("<","&lt;")
+      .replaceAll(">","&gt;")
+      .replaceAll('"',"&quot;")
+      .replaceAll("'","&#039;");
+  }
+
+  // search
+  searchInput.addEventListener("input", (e) => {
+    query = e.target.value || "";
+    render();
+  });
+
+  // pills
+  pillRow.addEventListener("click", (e) => {
+    const pill = e.target.closest(".pill");
+    if(!pill) return;
+    activeTag = pill.dataset.tag;
+    pillRow.querySelectorAll(".pill").forEach(p => p.classList.toggle("active", p === pill));
+    render();
+  });
+
+  render();
+</script>
 </body>
 </html>
+
